[package]
name = "leanpub-cli"
version = "0.1.1"
authors = ["Hong Jiang <j@1byte.io>"]
edition = "2018"
description = "CLI for leanpub.com"
license = "MIT"
repository = "https://github.com/hjiang/leanpub-cli"
homepage = "https://github.com/hjiang/leanpub-cli"
documentation = "https://github.com/hjiang/leanpub-cli/blob/master/README.md"

[dependencies]
structopt = "0.2.14"
reqwest = "0.9.11"
error-chain = "0.12.0"
serde_json = "1.0.39"
serde = { version = "1.0.89",features = ["derive"] }
